# onnx

./: CMakeLists.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
onnx/: checker.cc  checker.h  cpp2py_export.cc  external_data_helper.py  hub.py  onnxruntime_fix.h
onnx/common/: assertions.cc  path.h
onnx/defs/: schema.cc
onnx/test/: test_external_data.py
