# Copyright (c) ONNX Project Contributors
#
# SPDX-License-Identifier: Apache-2.0

[tox:tox]
envlist=py311

[testenv]
deps=pytest
commands=pytest

[aliases]
test=pytest

[tool:pytest]
addopts = --ignore=onnx/test/test_backend_test.py --ignore=onnx/test/reference_evaluator_backend_test.py --ignore=onnx/test/test_backend_reference.py --ignore=onnx/test/test_backend_onnxruntime.py --ignore=onnx/test/reference_evaluator_test.py
testpaths = onnx/test

[metadata]
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
